# cookie-stand-apii

./: db.sqlite3  pyproject.toml  requirements.txt
book/: settings.py  urls.py
bookapp/: views.py
bookapp/migrations/: 0001_initial.py
