[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["qusaiqishta <qeshtaqusai0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.12.4"
djangorestframework-simplejwt = "^4.7.2"
psycopg2 = "^2.9.1"
whitenoise = "^5.3.0"
django-environ = "^0.4.5"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
